--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,11 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/Reset.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/color/color.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/fontfamily/fontfamily.css">
+    <script src="https://cdn.jsdelivr.net/gh/yaohaixiao/autocjs/dist/autoc.min.js"></script>
     <title>React App</title>
   </head>
   <body>
     <div id="root"></div>
+    
   </body>
 </html>
