--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,8 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/color/color.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/fontfamily/fontfamily.css">
     <script src="https://cdn.jsdelivr.net/gh/yaohaixiao/autocjs/dist/autoc.min.js"></script>
-    <title>React App</title>
+    <title>Lyra的秘密基地
+    </title>
   </head>
   <body>
     <div id="root"></div>
